fixed logo z-index navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -34,6 +34,7 @@
 
 body {
   overflow-x: hidden;
+  z-index: 20;
 }
 
 body, html, * {
